TestGCEventMixedWithG1ConcurrentMark.java fails

XMLWordPrintable

    • gc
    • b89
    • Verified

        java.lang.AssertionError: Assertion failed: 1 = 2 : Unexpected number of heap_summary.before_gc
        at jrockit.Asserts.assertion(Asserts.java:33)
        at jrockit.Asserts.assertEquals(Asserts.java:45)
        at GCEventAll.verifySingleGcBatch(GCEventAll.java:388)
        at GCEventAll.verify(GCEventAll.java:167)
        at GCEventAll.doSingleTest(GCEventAll.java:118)
        at GCEventAll.doTest(GCEventAll.java:74)
        at TestGCEventMixedWithG1ConcurrentMark.main(TestGCEventMixedWithG1ConcurrentMark.java:20)
        at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
        at sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
        at sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
        at java.lang.reflect.Method.invoke(Method.java:519)
        at com.sun.javatest.regtest.agent.MainWrapper$MainThread.run(MainWrapper.java:92)
        at java.lang.Thread.run(Thread.java:746)
        Collector(G1Old) ignores error: Assertion failed: 6 = 2 : Wrong number of collections for collector G1Old
        EventCounts:
        CollectionSummary: young.collections=12, young.time=143322249, old.collections=6, old.time=310956135, collectors=(SerialOld, G1New, G1Old)
        BeanCounts:

              Assignee:
              Bengt Rutisson (Inactive)
              Reporter:
              Joseph Provino (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

                Created:
                Updated:
                Resolved: