8138717: TestGCEventMixedWithG1ConcurrentMark.java fails

Reviewed-by: jwilhelm, david